// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders container 1`] = `
@media (min-width: 576px) {
  .c0 {
    max-width: var(--acrool-container-max-width-sm, 540px);
  }
}

@media (min-width: 768px) {
  .c0 {
    max-width: var(--acrool-container-max-width-md, 720px);
  }
}

@media (min-width: 992px) {
  .c0 {
    max-width: var(--acrool-container-max-width-lg, 960px);
  }
}

@media (min-width: 1200px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xl, 1140px);
  }
}

@media (min-width: 1540px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xxl, 1540px);
  }
}

<div
  class="c0"
  data-class=""
  data-grid="container"
>
  container
</div>
`;

exports[`Container renders container fluid 1`] = `
<div
  class=""
  data-class="container-fluid"
  data-grid="container"
>
  container fluid
</div>
`;

exports[`Container renders container fluid="lg" 1`] = `
@media (min-width: 992px) {
  .c0 {
    max-width: var(--acrool-container-max-width-lg, 960px);
  }
}

@media (min-width: 1200px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xl, 1140px);
  }
}

@media (min-width: 1540px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xxl, 1540px);
  }
}

<div
  class="c0"
  data-class="container-lg"
  data-grid="container"
>
  container-lg
</div>
`;

exports[`Container renders container fluid="md" 1`] = `
@media (min-width: 768px) {
  .c0 {
    max-width: var(--acrool-container-max-width-md, 720px);
  }
}

@media (min-width: 992px) {
  .c0 {
    max-width: var(--acrool-container-max-width-lg, 960px);
  }
}

@media (min-width: 1200px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xl, 1140px);
  }
}

@media (min-width: 1540px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xxl, 1540px);
  }
}

<div
  class="c0"
  data-class="container-md"
  data-grid="container"
>
  container-md
</div>
`;
